--- a/src/app/componentes/busqueda-cursos/busqueda-cursos.component.html
+++ b/src/app/componentes/busqueda-cursos/busqueda-cursos.component.html
@@ -1,1 +1,16 @@
-<p>busqueda-cursos works!</p>
+<h1>Listado de Personajes:</h1>
+<table class="table table-striped">
+    <thead>
+        <td>ID</td> <td>NOMBRE</td> <td>ESTADO</td> <td>ESPECIE</td> <td>TIPO</td> <td>GÉNERO</td>
+    </thead>
+    <tbody>
+        <tr *ngFor="let p of personajes">
+            <td> {{p.id}} </td>
+            <td> {{p.name}} </td>
+            <td> {{p.status}} </td>
+            <td> {{p.species}} </td>
+            <td> {{p.type}} </td>
+            <td> {{p.gender}} </td>
+        </tr>
+    </tbody>
+</table>
