--- a/src/app/componentes/busqueda-cursos/busqueda-cursos.component.html
+++ b/src/app/componentes/busqueda-cursos/busqueda-cursos.component.html
@@ -1,7 +1,7 @@
-<h1>Listado de Personajes:</h1>
+<h1>{{'body.Listado de Personajes:'|translate}}</h1>
 <table class="table table-striped">
     <thead>
-        <td>ID</td> <td>NOMBRE</td> <td>ESTADO</td> <td>ESPECIE</td> <td>TIPO</td> <td>GÉNERO</td>
+      <td>{{'body.ID'|translate}}</td> <td>{{'body.NOMBRE'|translate}}</td> <td>{{'body.ESTADO'|translate}}</td> <td>{{'body.ESPECIE'|translate}}</td> <td>{{'body.TIPO'|translate}}</td> <td>{{'body.GENERO'|translate}}</td>
     </thead>
     <tbody>
         <tr *ngFor="let p of personajes">
