--- a/src/app/componentes/body-principal/body-principal.component.html
+++ b/src/app/componentes/body-principal/body-principal.component.html
@@ -1,12 +1,14 @@
-<app-header></app-header>
-
 <div class="container">
+  <app-header></app-header>
+
+  <p *ngFor="let u of Users">
+    {{'body.Bienvenid@'|translate}} {{u.username}}!
+  </p>
+
+
+
   <router-outlet></router-outlet>
 </div>
 
-<div class="container">
-  <div class="row align-center">
-    <app-footer></app-footer>
-  </div>
-</div>
+
 
