--- a/src/app/paginator/paginator.component.html
+++ b/src/app/paginator/paginator.component.html
@@ -1,4 +1,4 @@
-<mat-paginator [length]="personajes.length"
+<mat-paginator [length]="characters.length"
                [pageSize]="page_size"
                (page)="handlePage($event)">
 
